fixed height of admin toolbar to avoid layout shifts

--- a/packages/plugin-packages/mashroom-portal-default-theme/src/frontend/sass/admin.scss
+++ b/packages/plugin-packages/mashroom-portal-default-theme/src/frontend/sass/admin.scss
@@ -4,6 +4,7 @@
 
 #mashroom-portal-admin-app-container {
     background-color: $COLOR_BLACK;
+    height: 32px;
 
     .mashroom-portal-app-wrapper {
         min-height: 32px;
