--- a/packages/plugin-packages/mashroom-portal-demo-alternative-theme/src/frontend/sass/admin.scss
+++ b/packages/plugin-packages/mashroom-portal-demo-alternative-theme/src/frontend/sass/admin.scss
@@ -2,6 +2,7 @@
 
 #mashroom-portal-admin-app-container {
     background-color: $COLOR_BLACK;
+    height: 32px;
 
     .mashroom-portal-app-wrapper {
         min-height: 32px;
